Added comments that colin left us.

--- a/TP3/dissertation/Conclusion/reflective.tex
+++ b/TP3/dissertation/Conclusion/reflective.tex
@@ -1,3 +1,5 @@
+%TODO: add a short paragraph summarizing the paper.
+
 Over the course of this project, we've all learned a lot as a team. The importance of communication and organisation, the design decisions required of a large project, and how to split up work fairly. We've also learned more about networking and making GUIs in Java Swing. The following is a more in-depth discussion of how the project went for us.
 
 Early on, we had a sort of `laissez-faire' style of team management, with no one in particular in charge. We had few strict roles among us either, though a few had been decided. Gordon was willing to be secretary and take meeting minutes, and Heather was experienced with writing and editing, as well as being good at organisation, so she took the role of Quality Assurance. While we were designing the project though, we didn't have any other defined roles.
