--- a/TP3/dissertation/Design/design.tex
+++ b/TP3/dissertation/Design/design.tex
@@ -1,6 +1,8 @@
 \chapter{Design}
 \label{design}
 
+%TODO: Chapter introduction
+
 \input{Design/protocol.tex}
 
 \input{Design/client.tex}
@@ -8,3 +10,5 @@
 \input{Design/server.tex}
 
 \input{Design/networking.tex}
+
+%TODO: Chapter conclusion. Reflect on your design, and summarize the chapter. Explain how it relates to the implementation chapter.
