--- a/TP3/dissertation/Implementation/communication.tex
+++ b/TP3/dissertation/Implementation/communication.tex
@@ -1,2 +1,2 @@
 \section{Client-Server Communication}
-[I'm not sure if this section is needed? Should we talk about sockets and encryption here or elsewhere?]
+%TODO: [I'm not sure if this section is needed? Should we talk about sockets and encryption here or elsewhere?] (yes, talk about it here.)
