--- a/TP3/dissertation/Implementation/implementation.tex
+++ b/TP3/dissertation/Implementation/implementation.tex
@@ -1,6 +1,8 @@
 \chapter{Implementation}
 \label{implementation}
 
+%Introductory paragraph
+
 \input{Implementation/client.tex}
 
 \input{Implementation/server.tex}
