--- a/TP3/dissertation/Requirements/problem_definition.tex
+++ b/TP3/dissertation/Requirements/problem_definition.tex
@@ -1,3 +1,5 @@
+%TODO: Are the messenger links necessary?
+
 \section{Problem Definition}
 The following was our given problem definition\footnote{\texttt{http://fims.moodle.gla.ac.uk/file.php/129/1243.pdf}}:
 
