--- a/TP3/dissertation/Evaluation/server.tex
+++ b/TP3/dissertation/Evaluation/server.tex
@@ -7,4 +7,4 @@ The primary results these early tests yielded, other than spelling errors, was t
 
 Later tests involved testing features using the client. If a feature the client was trying to use failed, the message sent to the server would be checked for correctness (by using print messages on the string that was to be sent by the socket.) If the correct response was received by the client, which could be determined by reading commands received from the socket before parsing, it could be concluded the server was not at fault. However, in some cases, the server would not behave correctly. One instance involved a correctly formed command to add a friend, to which the server responded with an error saying the command was not formed correctly. At one stage, the friends list was not being displayed by the client. Using this testing process, it was discovered that the server had not spelled 'friend' correctly in multiple places. We were then able to correct spelling errors that had caused parsing issues in the server. 
 
-However, other problems were more conceptual than spelling errors, and involved the semantics of the GIM protocol. The GIM protocol gives permission for users who have certain users on their friendlist to view their contact information such as their personal message, status, and nickname. Secondly, users who are in a group chat with someone who is not on their friends list may also view this information. Testing using the client highlighted that this second case had not been implemented by the server, as required by the protocol. Further, 
+However, other problems were more conceptual than spelling errors, and involved the semantics of the GIM protocol. The GIM protocol gives permission for users who have certain users on their friend list to view their contact information such as their personal message, status, and nickname. Secondly, users who are in a group chat with someone who is not on their friends list may also view this information. Testing using the client highlighted that this second case had not been implemented by the server, as required by the protocol. Further, 
