Made changes to the abstract.

--- a/TP3/dissertation/dissertation.tex
+++ b/TP3/dissertation/dissertation.tex
@@ -38,7 +38,7 @@ James McMinn}
 \maketitle
 
 \begin{abstract}
-GIM is a client/server instant messaging application implemented in the Java Language. Comparable to many other similar programs, GIM allows users to communicate over a network with text based messages, using our own proprietary protocol. This dissertation discusses the process of developing GIM from the initial problem definition, though to completion.
+GIM is a client-server instant messaging application implemented in the Java programming language. Comparable to many other similar programs, GIM allows users to communicate over a network with text-based messages, using a protocol we developed from scratch. This dissertation discusses the process of developing GIM from the initial problem definition through to completion.
 \end{abstract}
 
 \begin{acknowledgements}
