Introduction added to chapter 2 (Requirements).

--- a/TP3/dissertation/Requirements/requirements.tex
+++ b/TP3/dissertation/Requirements/requirements.tex
@@ -1,7 +1,7 @@
 \chapter{Requirements}
 \label{requirements}
 
-%Add chapter introduction
+This chapter contains the problem our team was given and how we interpreted it to find the required features of the system. After that, each feature we aimed to include will be listed in order from most to least important and explained in detail.
 
 \input{Requirements/problem_definition.tex}
 
